; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_i915_gem_dmabuf.c_i915_gem_unmap_dma_buf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_i915_gem_dmabuf.c_i915_gem_unmap_dma_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dma_buf_attachment = type { i32 }
%struct.sg_table = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dma_buf_attachment*, %struct.sg_table*, i32)* @i915_gem_unmap_dma_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i915_gem_unmap_dma_buf(%struct.dma_buf_attachment* %0, %struct.sg_table* %1, i32 %2) #0 {
  %4 = alloca %struct.dma_buf_attachment*, align 8
  %5 = alloca %struct.sg_table*, align 8
  %6 = alloca i32, align 4
  store %struct.dma_buf_attachment* %0, %struct.dma_buf_attachment** %4, align 8
  store %struct.sg_table* %1, %struct.sg_table** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.dma_buf_attachment*, %struct.dma_buf_attachment** %4, align 8
  %8 = getelementptr inbounds %struct.dma_buf_attachment, %struct.dma_buf_attachment* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.sg_table*, %struct.sg_table** %5, align 8
  %11 = getelementptr inbounds %struct.sg_table, %struct.sg_table* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.sg_table*, %struct.sg_table** %5, align 8
  %14 = getelementptr inbounds %struct.sg_table, %struct.sg_table* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @dma_unmap_sg(i32 %9, i32 %12, i32 %15, i32 %16)
  %18 = load %struct.sg_table*, %struct.sg_table** %5, align 8
  %19 = call i32 @sg_free_table(%struct.sg_table* %18)
  %20 = load %struct.sg_table*, %struct.sg_table** %5, align 8
  %21 = call i32 @kfree(%struct.sg_table* %20)
  ret void
}

declare dso_local i32 @dma_unmap_sg(i32, i32, i32, i32) #1

declare dso_local i32 @sg_free_table(%struct.sg_table*) #1

declare dso_local i32 @kfree(%struct.sg_table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
